# anysteno

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  flake.nix  shell.nix
crates/steno-app/: Cargo.toml
crates/steno-app/src/: app.rs  fonts.rs  main.rs  state.rs
crates/steno-app/src/platform/: capture.rs  inject.rs  keymap.rs  mod.rs
crates/steno-core/: Cargo.toml
crates/steno-core/packs/en-beginner/: dict.json  layout.toml  pack.toml
crates/steno-core/packs/ja-beginner/: dict.json  layout.toml  pack.toml
crates/steno-core/src/: chord.rs  defaults.rs  dictionary.rs  engine.rs  layout.rs  lib.rs  pack.rs  stroke.rs
