[workspace]
resolver = "2"
members = ["crates/steno-core", "crates/steno-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["fairenemo <fairenemo@gmail.com>"]
repository = "https://github.com/fairenemo/anysteno"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"

# release profile: optimize for a small, fast single binary
[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization
codegen-units = 1   # better optimization at the cost of compile time
panic = "abort"     # no unwinding tables -> smaller binary
strip = true        # strip symbols
