[package]
name = "steno-app"
description = "anysteno GUI: egui front-end, global key capture, and text injection"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "anysteno"
path = "src/main.rs"

[dependencies]
steno-core = { path = "../steno-core" }
serde = { workspace = true }
serde_json = { workspace = true }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
rdev = "0.5"
enigo = "0.2"
directories = "5"
crossbeam-channel = "0.5"
anyhow = "1"
