[package]
name = "steno-core"
description = "Platform-neutral stenography engine: chording, strokes, dictionaries, language packs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
